@@ -113,6 +113,7 @@ public enum HDFSOperationType implements OperationType {
   DEL_ALL_UNDER_REPLICATED_BLKS,
   COUNT_ALL_UNDER_REPLICATED_BLKS,
   COUNT_UNDER_REPLICATED_BLKS_LESS_THAN_LVL4,
+  COUNT_CORRUPT_REPL_ONE_BLOCKS,
   COUNT_UNDER_REPLICATED_BLKS_AT_LVL,
   GET_ALL_UNDER_REPLICATED_BLKS,
   GET_UNDER_REPLICATED_BLKS_By_LEVEL_LIMITED,
